--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An Ionic project",
   "dependencies": {
     "firebase": "^2.4.1",
+    "firebase-token-generator": "^2.0.0",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
@@ -23,5 +24,7 @@
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
